start-state-3-form-tag

--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -1,218 +1,11 @@
-<!-- Header -->
 
-
-<html>
-  <head>
-    <link href="css/bootstrap.css" rel='stylesheet'>
-    <link href="css/style.css" rel='stylesheet'>
-  </head>
-  <body>
-    <div class="header">
-      <div class="container">
-        <div class="col-md-2">
-          <%= image_tag "logo.png", size: "161x20" %>
-        </div>
-        <div class="col-md-3">
-          <ul class="primary">
-            <li>Discover</li>
-            <li>Start</li>
-          </ul>
-        </div>
-        <div class="pull-right">
-        </div>
-      </div>
-    </div>
-
-
-<!-- Header -->
 
 <p id="notice"><%= notice %></p>
 
-<br>
-<br>
-
 <h1>Show Subject</h1>
-
 <p>
-  <strong>Name:</strong>
   <%= @subject.name %>
 </p>
 
-<%= link_to 'Edit', edit_subject_path(@subject), :class => "btn btn-kickstarter" %> 
-<%= link_to 'Back', subjects_path, :class => "btn btn-kickstarter" %>
-
-<br>
-<br>
-<br>
-<br>
-
-
-<!-- Project Index Page -->
-
-
-<h1><%= @subject.name %></h1>
-  <% @projects = @projects.to_a %>
-  <% first = @projects.shift %>
-
-    <% if first %>
-    <div class="project">
-      <div class="container">
-        <div class="row">
-          <div class="col-xs-5">
-            <img src="<%= first.image %>" width="100%">
-          </div>
-          <div class="col-xs-7">
-            <h3 class="title"><%= first.title %></h3>
-            <p class="author"><%= first.creator %></p>
-            <p class="description"><%= first.description %></p>
-            <div class="progress">
-              <% progress = (first.total / first.goal).to_i %>
-              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="<%= progress %>" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-                <span class="sr-only"><%= progress %>% Complete (success)</span>
-              </div>
-            </div>                
-          </div>
-
-          <div class="col-xs-1">
-            <h4><%= progress %>%</h4>
-            <h5>funded</h5>
-          </div>
-          <div class="col-xs-1">
-            <h4>$<%= first.total %></h4>
-            <h5>pledged</h5>
-          </div>
-          <div class="col-xs-2">
-            <h4><%= distance_of_time_in_words(Time.now, Time.now + 30.days) %></h4>
-            <h5>days to go</h5>
-          </div>
-        </div>
-      </div>
-    </div>
-    <% end %>
-    <% @projects.in_groups_of(3).each do |projects_group| %>
-      <div class="container">
-        <div class="row">
-          <% projects_group.each do |project| %>
-            <% next unless project %>
-            <div class="col-sm-4">
-              <div class="thumbnail">
-                <img src="<%= project.image %>">
-                <div class="caption">
-                  <h3 class="title"><%= project.title %></h3>
-                  <p class="author"><%= project.creator %></p>
-                  <p class="description"><%= project.description %></p>
-                  
-                  <div class="progress">
-                    <% progress = (project.total / project.goal).to_i %>
-                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-                      <span class="sr-only"><%= project %>% Complete (success)</span>
-                    </div>
-                  </div> 
-
-                  <div class="row">
-                    <div class="col-xs-3">
-                      <h4><%= progress %>%</h4>
-                      <h5>funded</h5>
-                    </div>
-                    <div class="col-xs-3">
-                      <h4>$<%= project.total %></h4>
-                      <h5>pledged</h5>
-                    </div>
-                    <div class="col-xs-3">
-                      <h4><%= distance_of_time_in_words(Time.now, Time.now + 30.days) %></h4>
-                      <h5>days to go</h5>
-                    </div>                
-                  </div>
-                </div>
-              </div>
-            </div>
-            <% end %>
-      </div>
-    </div>
-    <% end %>
-
-    <div class="promo">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-4">
-            <h2>Success</h2>
-          </div>
-          <div class="col-md-4">
-            <h2>Community</h2>
-          </div>
-          <div class="col-md-4">
-            <h2>Start</h2>
-          </div>
-        </div>
-      </div>
-    </div>
-
-
-<!-- Footer -->
-
-    <div class="footer">
-      <div class="container">
-        <div class="links row">
-          <div class="col-sm-3">
-            <h5>About us</h5>
-            <ul>
-              <li>What is Kickstarter?</li>
-              <li>2013 highlights</li>
-              <li>Who we are</li>
-              <li>Jobs</li>
-              <li>Press</li>
-              <li>Stats</li>
-              <li>Projects we love</li>
-            </ul>
-          </div>
-          <div class="col-sm-5">
-            <h5>Discover</h5>
-            <div class="row">
-              <div class="col-xs-6">
-                <ul>
-                  <li>Art</li>
-                  <li>Comics</li>
-                  <li>Crafts</li>
-                  <li>Dance</li>
-                  <li>Design</li>
-                  <li>Fashion</li>
-                  <li>Film &amp; Video</li>
-                  <li>Food</li>
-                </ul>
-              </div>
-              <div class="col-xs-6">
-                <ul>
-                  <li>Games</li>
-                  <li>Journalism</li>
-                  <li>Music</li>
-                  <li>Photography</li>
-                  <li>Publishing</li>
-                  <li>Technology</li>
-                  <li>Theater</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-3">
-            <h5>Hello</h5>
-            <ul>
-              <li>Twitter</li>
-              <li>Facebook</li>
-              <li>Tumblr</li>
-              <li>Instagram</li>
-              <li>Vine</li>
-            </ul>
-          </div>
-        </div>
-        <div class="bottom row">
-          <div class="col-md-2">
-            <%= image_tag "logo-grey.png", size: "161x20" %>
-          </div>
-          <div class="pull-right">
-            <p>&copy; 2015 Kickstarter, Inc</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </body>
-</html>
+<%= link_to 'Edit', edit_subject_path(@subject)%> 
+<%= link_to 'Back' %>
