--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,126 +1,36 @@
-<!-- Header -->
+<p id="notice"><%= notice %></p>
 
-<html>
-  <head>
-    <link href="css/bootstrap.css" rel='stylesheet'>
-    <link href="css/style.css" rel='stylesheet'>
-  </head>
-  <body>
-    <div class="header">
-      <div class="container">
-        <div class="col-md-2">
-          <%= image_tag "logo.png", size: "161x20" %>
-        </div>
-        <div class="col-md-3">
-          <ul class="primary">
-            <li>Discover</li>
-            <li>Start</li>
-          </ul>
-        </div>
-        <div class="pull-right">
-        </div>
-      </div>
-    </div>
+<p>
+  <strong>Title:</strong>
+  <%= @project.title %>
+</p>
 
+<p>
+  <strong>Creator:</strong>
+  <%= @project.creator %>
+</p>
 
-<!-- Header -->
+<p>
+  <strong>Image:</strong>
+  <%= @project.image %>
+</p>
 
-    <div class="wrap">
-      <div class="project-content">
-        <div class="container">
-          <h1 class="title"><%= @project.title %></h1>
-          <p class="author"><%= @project.creator %></p>
-          <div class="project-nav">
-            <ul>
-              <li class="active">Home</li>
-              <li>Comments <span class="label label-default"></span></li>
-          </div>
-          <div class="project-body">
-            <div class="row">
-              <div class="col-md-8">
-                <img class="img-responsive" src=<%=@project.image %>>
-                <p class="subheading"></p>
-                <h1> <%= @project.title %> </h1>
-                <p><%= @project.description %></p>
-              </div>
-              <div class="col-md-4">
-                <div class="stats">
-                  <h1><%= number_to_currency(@project.total) %></h1>
-                  <h5>pledged of <h5>
-                  <h1> <%= number_to_currency(@project.goal) %></h1>
-                  <h5>goal<h5>
-                </div>
-            </div>
-          </div>
-      </div>
-    </div>
+<p>
+  <strong>Description:</strong>
+  <%= @project.description %>
+</p>
+
+<p>
+  <strong>Goal:</strong>
+  <%= @project.goal %>
+</p>
+
+<p>
+  <strong>Total:</strong>
+  <%= @project.total %>
+</p>
 
 
-<!-- Footer -->
 
-    <div class="footer">
-      <div class="container">
-        <div class="links row">
-          <div class="col-sm-3">
-            <h5>About us</h5>
-            <ul>
-              <li>What is Kickstarter?</li>
-              <li>2013 highlights</li>
-              <li>Who we are</li>
-              <li>Jobs</li>
-              <li>Press</li>
-              <li>Stats</li>
-              <li>Projects we love</li>
-            </ul>
-          </div>
-          <div class="col-sm-5">
-            <h5>Discover</h5>
-            <div class="row">
-              <div class="col-xs-6">
-                <ul>
-                  <li>Art</li>
-                  <li>Comics</li>
-                  <li>Crafts</li>
-                  <li>Dance</li>
-                  <li>Design</li>
-                  <li>Fashion</li>
-                  <li>Film &amp; Video</li>
-                  <li>Food</li>
-                </ul>
-              </div>
-              <div class="col-xs-6">
-                <ul>
-                  <li>Games</li>
-                  <li>Journalism</li>
-                  <li>Music</li>
-                  <li>Photography</li>
-                  <li>Publishing</li>
-                  <li>Technology</li>
-                  <li>Theater</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-3">
-            <h5>Hello</h5>
-            <ul>
-              <li>Twitter</li>
-              <li>Facebook</li>
-              <li>Tumblr</li>
-              <li>Instagram</li>
-              <li>Vine</li>
-            </ul>
-          </div>
-        </div>
-        <div class="bottom row">
-          <div class="col-md-2">
-            <%= image_tag "logo-grey.png", size: "161x20" %>
-          </div>
-          <div class="pull-right">
-            <p>&copy; 2015 Kickstarter, Inc</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </body>
-</html>
+<%= link_to 'Edit', edit_project_path(@project) %> |
+<%= link_to 'Back', projects_path %>
