--- a/app/views/projects/show_5_9.html.erb
+++ b/app/views/projects/show_5_9.html.erb
@@ -1,5 +1,7 @@
 <%= render '/shared/header' %>
 
+<p id="notice"><%= notice %></p>
+
     <div class="wrap">
       <div class="project-content">
         <div class="container">
