changed start state files for asset pipeline

--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -7,8 +7,8 @@
 <%= link_to 'Show', @project %> |
 <%= link_to 'Back', projects_path %>
 
-<%= link_to 'Show', @subject, :class => "btn btn-kickstarter btn-sm" %>
-<%= link_to 'Back', subjects_path, :class => "btn btn-kickstarter btn-sm" %>
+<%= link_to 'Show', @project, :class => "btn btn-kickstarter btn-sm" %>
+<%= link_to 'Back', projects_path, :class => "btn btn-kickstarter btn-sm" %>
 
 
 <%= render '/shared/footer' %> 
