--- a/app/views/projects/edit_1_18.html.erb
+++ b/app/views/projects/edit_1_18.html.erb
@@ -4,8 +4,8 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @subject, :class => "btn btn-kickstarter btn-sm" %>
-<%= link_to 'Back', subjects_path, :class => "btn btn-kickstarter btn-sm" %>
+<%= link_to 'Show', @project, :class => "btn btn-kickstarter btn-sm" %>
+<%= link_to 'Back', projects_path, :class => "btn btn-kickstarter btn-sm" %>
 
 
 <%= render '/shared/footer' %> 
