added all necessary changes to start state scratch to date

--- a/app/views/projects/edit_1_18.html.erb
+++ b/app/views/projects/edit_1_18.html.erb
@@ -1,11 +1,20 @@
 <%= render '/shared/header' %> 
 
+<br>
+<br>
+<br>
+<br>
+
 <h1>Edit Project</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @subject, :class => "btn btn-kickstarter btn-sm" %>
-<%= link_to 'Back', subjects_path, :class => "btn btn-kickstarter btn-sm" %>
+<%= link_to 'Show', @project, :class => "btn btn-kickstarter btn-sm" %>
+<%= link_to 'Back', projects_path, :class => "btn btn-kickstarter btn-sm" %>
 
+<br>
+<br>
+<br>
+<br>
 
 <%= render '/shared/footer' %> 
