--- a/app/views/subjects/edit.html.erb
+++ b/app/views/subjects/edit.html.erb
@@ -6,19 +6,12 @@
 <!-- <div class="container"> 
     <div class="row">
       <div class="col-md-12 text-left"> -->
-      <h1>Edit Subject</h1>
-<!--       </div> -->
-
-<!-- 	<div class="row">
-	  <div class="col-md-12 text-left"> -->
-	    <%= render 'form' %>
-<!-- 	  </div>
-	</div> -->
-
-<!-- 	<div class="row">
-	  <div class="col-md-12 text-left"> -->
-	  <%= link_to 'Show', @subject, :class => "btn btn-kickstarter btn-sm" %>
-	  <%= link_to 'Back', subjects_path, :class => "btn btn-kickstarter btn-sm" %>
+      <div class="edit-container">
+	      <h1>Edit Subject</h1>
+		    <%= render 'form' %>
+		  <%= link_to 'Show', @subject, :class => "btn btn-kickstarter btn-sm" %>
+		  <%= link_to 'Back', subjects_path, :class => "btn btn-kickstarter btn-sm" %>
+	</div>
 <!-- 	</div>
 	</div>
 </div> -->
