--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -66,24 +66,26 @@
                 <span class="sr-only">40% Complete (success)</span>
               </div>
             </div>
+            <div class="project-status">
+            <div class="status-item">
+              <h4>60%</h4>
+              <h5>funded</h5>
+            </div>
+            <div class="status-item">
+              <h4>$18,246</h4>
+              <h5>pledged</h5>
+            </div>
+            <div class="status-item">
+              <h4>187</h4>
+              <h5>backers</h5>
+            </div>
+            <div class="status-item">
+              <h4>11</h4>
+              <h5>days to go</h5>
+            </div>
           </div>
-
-          <div class="col-xs-1">
-            <h4>60%</h4>
-            <h5>funded</h5>
           </div>
-          <div class="col-xs-1">
-            <h4>$18,246</h4>
-            <h5>pledged</h5>
-          </div>
-          <div class="col-xs-1">
-            <h4>187</h4>
-            <h5>backers</h5>
-          </div>
-          <div class="col-xs-2">
-            <h4>11</h4>
-            <h5>days to go</h5>
-          </div>
+          
         </div>
       </div>
     </div>
