--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -75,24 +75,27 @@
                     <span class="sr-only">40% Complete (success)</span>
                   </div>
                 </div>
-              </div>
-
-              <div class="col-xs-1">
+                <div class="project-status">
+              <div class="status-item">
                 <h4>60%</h4>
                 <h5>funded</h5>
               </div>
-              <div class="col-xs-1">
+              <div class="status-item">
                 <h4>$18,246</h4>
                 <h5>pledged</h5>
               </div>
-              <div class="col-xs-1">
+              <div class="status-item">
                 <h4>187</h4>
                 <h5>backers</h5>
               </div>
-              <div class="col-xs-2">
+              <div class="status-item">
                 <h4>11</h4>
                 <h5>days to go</h5>
               </div>
+            </div>
+              </div>
+
+            
 
             </div>
           </div>
@@ -128,7 +131,9 @@
 
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="http://bit.ly/1tiq9Xi">
+              <div class="thumbnail-img-container">
+                <img src="http://bit.ly/1tiq9Xi">
+              </div>
               <div class="caption">
                 <h3 class="title">Title goes here</h3>
                 <p class="author">by Author Here</p>
@@ -160,7 +165,9 @@
 
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="http://bit.ly/1B2CiGf">
+              <div class="thumbnail-img-container">
+                <img src="http://bit.ly/1tiq9Xi">
+              </div>
               <div class="caption">
                 <h3 class="title">Title goes here</h3>
                 <p class="author">by Author Here</p>
@@ -192,7 +199,9 @@
 
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="http://bit.ly/1Blj0tE">
+             <div class="thumbnail-img-container">
+                <img src="http://bit.ly/1tiq9Xi">
+              </div>
               <div class="caption">
                 <h3 class="title">Title goes here</h3>
                 <p class="author">by Author Here</p>
