--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -34,6 +34,20 @@ a {
   color: #828587;
 }
 
+.logo-main {
+  max-width: 178px;
+}
+
+.byline {
+  max-width: 183px;
+}
+
+.user-menu {
+  position: absolute;
+  top: 10px;
+  right: 5px;
+}
+
 /* Jumbotron */
 .jumbotron {
   position: relative;
@@ -72,6 +86,16 @@ a {
   padding: 15px 20px
 }
 
+.project-status {
+  display: inline-block;
+  width: 100%;
+}
+
+.status-item {
+  width: 60px;
+  display: inherit;
+}
+
 /* Staff picks */
 .staff-picks {
   background-color: #f7fafa;
@@ -96,7 +120,7 @@ a {
   color: #828587;
   display: inline-block;
   font-size: 12px;
-  font-weight: bold;
+  font-weight: bod;
   padding: 33px 0;
   text-decoration: none;
 }
@@ -185,12 +209,20 @@ a {
 
 .thumbnail {
   padding: 0;
+  overflow-x: hidden;
 }
 
-.thumbnail img {
+.thumbnail{
   margin: 0;
+
+}
+
+.thumbnail-img-container {
+  height: 218px;
+  overflow: hidden;
   width: 100%;
 }
+
 
 .popular .title {
   color: #0f2105;
@@ -475,13 +507,22 @@ a {
 }
 
 
-.project-content .pledge {
+.pledge{
+  width: 100%;
+  line-height: 100%;
   padding: 10px;
+  color: black;
+
 }
 
-.project-content .pledge:hover {
+ .pledge:hover {
+  background-color: green !important;
+  color: white !important;
+}
+
+.project-content .pledge a:hover {
   text-decoration:none;
-  background-color: #f7fafa;
+
 }
 
 .project-content .pledge + .pledge {
@@ -531,3 +572,29 @@ a {
   font-size: 14px;
   padding: 40px 0;
 }
+
+.edit-container {
+  margin-left: 10px;
+}
+
+@media screen and (max-width: 400px) {
+  .status-item {
+    width: 46px;
+    padding-right: 3px;
+  }
+
+  .status-item h4 {
+    font-size: 12px;
+  }
+
+  .status-item h5 {
+    font-size: 10px;
+  }
+}
+@media screen and (max-width: 765px) and (min-width: 498px){
+  .thumbnail-img-container img {
+  margin-top: -90px !important;
+}
+
+}
+
