--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -577,6 +577,10 @@ a {
   margin-left: 10px;
 }
 
+.project-container {
+  margin-left: 20px;
+}
+
 @media screen and (max-width: 400px) {
   .status-item {
     width: 46px;
