--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -2,33 +2,6 @@
 
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Subjects</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @subjects.each do |subject| %>
-      <tr>
-        <td><%= subject.name %></td>
-        <td><%= link_to 'Show', subject %></td>
-        <td><%= link_to 'Edit', edit_subject_path(subject) %></td>
-        <td><%= link_to 'Destroy', subject, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Subject', new_subject_path %>
-
-
     <div class="subjects">
       <div class="container">
         <h1>Explore an innovative creative universe</h1>
@@ -55,7 +28,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-5">
-            <img src="http://placehold.it/499x374" width="100%">
+            <img src="http://bit.ly/1A94h5v" width="100%">
           </div>
           <div class="col-xs-7">
             <h3 class="title">Title goes here</h3>
